# eval

./: CHANGELOG.md  README.md  eval.cabal
app/: Main.hs
src/: Eval.hs
